--- a/public/view/index.html
+++ b/public/view/index.html
@@ -140,7 +140,7 @@
         key: $("#key").val().trim()
       };
       // Question: What does this code do??
-      $.post("/launch", obj)
+      $.post("https://rocky-savannah-17002.herokuapp.com/launch", obj)
       .done(function(data) {
       })
     })
